--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind variants;
+.scrollbar-rounded {
+    &::-webkit-scrollbar-track {
+        background-color: rgb(255, 255, 255);
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: rgba(152, 151, 151, 0.75);
+        border-radius: 10px;
+    }
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
+}
