--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1282,19 +1282,18 @@
 
 /*button*/
 
-.box{
+.box {
     width: 400px;
     bottom: 0;
     left: 0;
     z-index: 9999;
     overflow: hidden;
 }
+
 /*footer*/
 * {
     box-sizing: border-box;
 }
-
-
 
 footer {
     background-color: rgb(58, 58, 58);
@@ -1305,59 +1304,73 @@ footer {
     padding: 50px;
     justify-content: space-between;
 }
+
 .container .content .col {
     display: flex;
     flex-direction: column;
 }
-.container .content p:first-child:not(.flex p:first-child) {
+
+.container .content .in-col:first-child:not(.flex .in-col:first-child) {
     color: white;
     font-size: 22px;
 }
-.container .content p:not(.col, .column p:first-child) {
+
+.container .content .in-col:not(.col, .column .in-col:first-child) {
     color: rgb(136, 136, 136);
     text-align: left;
     margin-bottom: 10px;
 }
+
 .container .content .col:first-child {
     gap: 25px;
 }
+
 .container .content .col:first-child .flex {
     display: flex;
     gap: 50px;
 }
+
 .container .content .col:first-child .flex .col-info {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-.container .content .col:first-child .flex .col-info p {
+
+.container .content .col:first-child .flex .col-info .in-col {
     font-size: 14px;
     text-align: left;
 }
+
 .container .content .col:first-child .flex .col-info span {
     color: white;
     font-size: 17px;
 }
+
 .container .content .col .column:first-child {
     margin-right: 50px;
 }
 
-.container .content .col .column p:first-child {
+.container .content .col .column .in-col:first-child {
     margin-bottom: 25px;
 }
-.container .content .col .column p:hover {
-   color: #ff6a00;
+
+.container .content .col .column .in-col:hover {
+    color: #ff6a00;
     cursor: pointer;
 }
-.container .content .col .column p:not(p:first-child) {
+
+.container .content .col .column .in-col:not(.in-col:first-child) {
     margin-bottom: 12px;
 }
+
 .container .content .col:last-child {
     gap: 15px;
 }
+
 .container .content .col:last-child .email {
     display: flex;
 }
+
 .container .content .col:last-child .email input {
     width: 300px;
     height: 40px;
@@ -1368,6 +1381,7 @@ footer {
     border: 0;
     outline: 0;
 }
+
 .container .content .col:last-child .email button {
     width: 200px;
     height: 40px;
@@ -1385,33 +1399,41 @@ footer {
     align-items: center;
     border-radius: 3px;
 }
+
 .container .content .col:last-child .social {
     display: flex;
     gap: 20px;
 }
+
 .container .content .col:last-child .social img {
     width: 40px;
     cursor: pointer;
 }
+
 .content-foot {
     background-color: rgb(43, 43, 43);
 }
-.content-foot .foot-text{
+
+.content-foot .foot-text {
     padding: 25px 80px;
     display: flex;
     justify-content: space-between;
 }
-.content-foot .container p {
+
+.content-foot .container .in-col {
     color: rgb(136, 136, 136);
 }
-.content-foot .container p span {
+
+.content-foot .container .in-col span {
     color: white;
     font-weight: bold;
 }
+
 .content-foot .container .pay {
     display: flex;
     gap: 20px;
 }
+
 .content-foot .container .pay img {
     width: 70px;
     height: 40px;
