UpdateUser+Login+Logout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1366,9 +1366,10 @@ footer {
 
 
 .container .content .col .column .in-col:hover {
-   color: #ff6a00;
+    color: #ff6a00;
     cursor: pointer;
 }
+
 .container .content .col .column .in-col:not(.in-col:first-child) {
     margin-bottom: 12px;
 }
@@ -1451,10 +1452,8 @@ footer {
     background-color: white;
     padding: 10px 5px;
 }
+
 /*loading*/
-
-
-
 
 
 .pl {
@@ -1462,55 +1461,71 @@ footer {
     width: 12em;
     height: 12em;
 }
+
 .pl__drop, .pl__drop-inner, .pl__pan, .pl__ring, .pl__shadow {
     animation: pan 2s cubic-bezier(0.65, 0, 0.35, 1) infinite;
 }
+
 .pl__drop {
     transform-origin: 13px 60px;
 }
+
 .pl__drop-inner {
     animation-timing-function: cubic-bezier(0.33, 0.84, 0.67, 0.84);
 }
+
 .pl__drop--1 {
     animation-name: drop-1;
 }
+
 .pl__drop--1 .pl__drop-inner {
     animation-name: drop-1-inner;
 }
+
 .pl__drop--2 {
     animation-name: drop-2;
 }
+
 .pl__drop--2 .pl__drop-inner {
     animation-name: drop-2-inner;
 }
+
 .pl__drop--3 {
     animation-name: drop-3;
     transform-origin: 67px 72px;
 }
+
 .pl__drop--3 .pl__drop-inner {
     animation-name: drop-3-inner;
 }
+
 .pl__drop--4 {
     animation-name: drop-4;
     transform-origin: 67px 72px;
 }
+
 .pl__drop--4 .pl__drop-inner {
     animation-name: drop-4-inner;
 }
+
 .pl__drop--5 {
     animation-name: drop-5;
     transform-origin: 67px 72px;
 }
+
 .pl__drop--5 .pl__drop-inner {
     animation-name: drop-5-inner;
 }
+
 .pl__pan {
     transform-origin: 36px 74px;
     color: #a6a3a3;
 }
+
 .pl__ring {
     animation-name: flip-ring;
 }
+
 .pl__shadow {
     animation-name: pan-shadow;
     transform-origin: 36px 124.5px;
@@ -1522,6 +1537,7 @@ footer {
 
     }
 }
+
 /* Animation */
 @keyframes drop-1 {
     from {
@@ -1538,6 +1554,7 @@ footer {
         transform: translate(-6px, 0);
     }
 }
+
 @keyframes drop-1-inner {
     from, 30% {
         fill: hsl(223, 10%, 70%);
@@ -1548,6 +1565,7 @@ footer {
         transform: translate(0, -27px);
     }
 }
+
 @keyframes drop-2 {
     from {
         animation-timing-function: steps(1, end);
@@ -1563,6 +1581,7 @@ footer {
         transform: translate(-8px, 0);
     }
 }
+
 @keyframes drop-2-inner {
     from, 30% {
         fill: hsl(223, 10%, 70%);
@@ -1573,6 +1592,7 @@ footer {
         transform: translate(0, -9px);
     }
 }
+
 @keyframes drop-3 {
     from {
         animation-timing-function: steps(1, end);
@@ -1588,6 +1608,7 @@ footer {
         transform: translate(-24px, 0);
     }
 }
+
 @keyframes drop-3-inner {
     from, 78% {
         fill: hsl(223, 10%, 70%);
@@ -1598,6 +1619,7 @@ footer {
         transform: translate(0, -28px);
     }
 }
+
 @keyframes drop-4 {
     from {
         animation-timing-function: steps(1, end);
@@ -1613,6 +1635,7 @@ footer {
         transform: translate(-8px, 0);
     }
 }
+
 @keyframes drop-4-inner {
     from, 78% {
         fill: hsl(223, 10%, 70%);
@@ -1623,6 +1646,7 @@ footer {
         transform: translate(0, -36px);
     }
 }
+
 @keyframes drop-5 {
     from {
         animation-timing-function: steps(1, end);
@@ -1638,6 +1662,7 @@ footer {
         transform: translate(8px, 0);
     }
 }
+
 @keyframes drop-5-inner {
     from, 78% {
         fill: hsl(223, 10%, 70%);
@@ -1648,6 +1673,7 @@ footer {
         transform: translate(0, -32px);
     }
 }
+
 @keyframes flip-ring {
     from, 27% {
         animation-timing-function: cubic-bezier(0.33, 0.84, 0.67, 0.84);
@@ -1664,6 +1690,7 @@ footer {
         stroke-width: 4px;
     }
 }
+
 @keyframes pan {
     from, 88%, to {
         transform: translate(0, 0) rotate(0);
@@ -1689,6 +1716,7 @@ footer {
         transform: translate(0, -2px) rotate(0);
     }
 }
+
 @keyframes pan-shadow {
     from, 88%, to {
         fill: hsla(223, 10%, 50%, 0.2);
@@ -1719,6 +1747,17 @@ footer {
         fill: hsla(223, 10%, 50%, 0.225);
         transform: scaleX(1.065);
     }
+}
+
+.btn-light {
+    color: #4b5675;
+    border: 1px solid #dbdfe9;
+    border-radius: 5px;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    padding: 6px;
+
 }
 
 
