--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1757,7 +1757,11 @@ footer {
     justify-items: center;
     align-items: center;
     padding: 6px;
+}
+.blur-custom {
 
+    background-color: rgba(34, 34, 34, 0.7);
+    backdrop-filter: blur(4px);
 }
 
 
