--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,16 @@
 @import url('https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css');
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;1,900&family=Nunito:wght@200..1000&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+.nunito {
+    font-family: "Nunito", sans-serif;
+    font-weight: 1000;
+
+}
 
 .scrollbar-rounded {
     &::-webkit-scrollbar-track {
